logs/zif.xtemplate.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zif'...
Listing './lib/python3.5/site-packages/zif/xtemplate'...
Listing './lib/python3.5/site-packages/zif/xtemplate/dtds'...
Compiling './lib/python3.5/site-packages/zif/xtemplate/lxmlhtmlutils.py'...
***   File "./lib/python3.5/site-packages/zif/xtemplate/lxmlhtmlutils.py", line 194
    print """This package uses PyXML.( http://pyxml.sourceforge.net/) 
    It may be installed as "pyxml" or python-xml" in Linux distributions.
    """
                                                                      
                                                                         
      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zif/xtemplate/xtemplate.py'...
***   File "./lib/python3.5/site-packages/zif/xtemplate/xtemplate.py", line 52
    print """This package uses lxml.(http://codespeak.net/lxml/) 
    It may be installed as "lxml" or "python-lxml" in Linux distributions.
    easy_install also works.  You want version 1.0+
    """
                                                                 
                                                                          
                                                   
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zif.xtemplate-0.2.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
